--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -4,12 +4,13 @@ status: true
 dependencies:
   module:
     - editor
-    - sis_misc
+    - entity_embed
+    - media
 _core:
   default_config_hash: afTU0GNxo-MjXuKrD1zBE1IaHJRMmN1WXWmheRdJg8o
 name: 'Simpel HTML'
 format: basic_html
-weight: -8
+weight: -9
 filters:
   filter_html:
     id: filter_html
@@ -17,7 +18,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<0> <1> <2> <3 cite> <4> <5 type> <6 type start> <7> <8> <9> <10> <11 id> <12 id> <13 class=""> <14> <15> <16 src alt data-entity-type data-entity-uuid data-align data-caption data-image-size width height> <17 href hreflang target data-entity-substitution data-entity-type data-entity-uuid title> <18> <19> <20> <21> <22> <23> <24> <25> <strong> <em> <a href> <ul> <li> <ol> <img src alt data-entity-type data-entity-uuid data-align data-caption data-image-size> <p class=""> <h1> <h2> <h3> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <br>'
+      allowed_html: '<br> <p class> <h1 class="text-align-left text-align-center text-align-right text-align-justify"> <h2 class="text-align-left text-align-center text-align-right text-align-justify"> <h3 class="text-align-left text-align-center text-align-right text-align-justify"> <figcaption> <figure src alt data-entity-type data-entity-uuid data-align data-caption data-image-size> <img data-image-size src alt height width data-entity-uuid data-entity-type data-caption data-align> <strong> <em> <a href> <ul> <ol> <li> <table> <tr> <td rowspan colspan> <th rowspan colspan> <thead> <tbody> <tfoot> <caption> <drupal-media data-entity-type data-entity-uuid alt data-caption data-align>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
@@ -44,15 +45,18 @@ filters:
     status: true
     weight: 11
     settings: {  }
-  filter_responsive_table:
-    id: filter_responsive_table
-    provider: sis_misc
+  entity_embed:
+    id: entity_embed
+    provider: entity_embed
     status: true
-    weight: 0
+    weight: 100
     settings: {  }
-  filter_image_style:
-    id: filter_image_style
-    provider: sis_misc
+  media_embed:
+    id: media_embed
+    provider: media
     status: true
-    weight: 0
-    settings: {  }
+    weight: 100
+    settings:
+      default_view_mode: default
+      allowed_view_modes: {  }
+      allowed_media_types: {  }
