SIS2-712: Changed order on latitude and longitude on node article form + added new description text for both fields

--- a/config/sync/field.field.node.dot_on_map.lon.yml
+++ b/config/sync/field.field.node.dot_on_map.lon.yml
@@ -10,7 +10,7 @@ field_name: lon
 entity_type: node
 bundle: dot_on_map
 label: Længdegrad
-description: 'Bruges hvis der ikke er nogen adresse. Eksempelværdi: 56.1131237.'
+description: 'Bruges hvis der ikke er nogen adresse. Eksempelværdi: 11.1131237'
 required: false
 translatable: true
 default_value: {  }
