SIS2-714: Changes to workbench_email_templates

--- a/config/sync/workbench_email.workbench_email_template.article_approved.yml
+++ b/config/sync/workbench_email.workbench_email_template.article_approved.yml
@@ -8,7 +8,7 @@ dependencies:
 id: article_approved
 label: 'Artikel godkendt'
 format: html
-subject: 'Artikel godkendt'
+subject: 'Artikel godkendt - Skoven i Skolen'
 recipient_types:
   author:
     id: author
