--- a/config/sync/workbench_email.workbench_email_template.article_submitted.yml
+++ b/config/sync/workbench_email.workbench_email_template.article_submitted.yml
@@ -7,7 +7,7 @@ dependencies:
     - node.type.dot_on_map
 id: article_submitted
 label: 'Artikel indsendt'
-format: plain_text
+format: html
 subject: 'Ny artikel: [node:title] '
 recipient_types:
   fixed_email:
@@ -20,6 +20,6 @@ bundles:
   'node:article': 'node:article'
   'node:dot_on_map': 'node:dot_on_map'
 body:
-  value: "En artikel afventer godkendelse\r\n\r\nSe artiklen [node:url]"
-  format: plain_text
+  value: "<p>En artikel afventer godkendelse</p>\r\n\r\n<p>Se artiklen [node:url]</p>\r\n"
+  format: basic_html
 replyTo: ''
