--- a/config/sync/editor.editor.simpel_html_til_faktabokse.yml
+++ b/config/sync/editor.editor.simpel_html_til_faktabokse.yml
@@ -1,54 +1,40 @@
-uuid: 6ef50ae3-868e-4985-b2cb-0c9fa03f0e94
+uuid: 6de46344-42df-444a-af81-e46ef9d248da
 langcode: da
 status: true
 dependencies:
   config:
     - filter.format.simpel_html_til_faktabokse
   module:
-    - ckeditor5
+    - ckeditor
 format: simpel_html_til_faktabokse
-editor: ckeditor5
+editor: ckeditor
 settings:
   toolbar:
-    items:
-      - bold
-      - italic
-      - '|'
-      - link
-      - '|'
-      - bulletedList
-      - numberedList
-      - '|'
-      - blockQuote
-      - code
-      - heading
-      - sourceEditing
+    rows:
+      -
+        -
+          name: Formatering
+          items:
+            - Bold
+            - Italic
+        -
+          name: Links
+          items:
+            - DrupalLink
+            - DrupalUnlink
+        -
+          name: Lister
+          items:
+            - BulletedList
+            - NumberedList
+        -
+          name: Media
+          items:
+            - Blockquote
   plugins:
-    ckeditor5_heading:
-      enabled_headings:
-        - heading2
-        - heading3
-        - heading4
-        - heading5
-        - heading6
-    ckeditor5_sourceEditing:
-      allowed_tags:
-        - '<cite>'
-        - '<dl>'
-        - '<dt>'
-        - '<dd>'
-        - '<blockquote cite>'
-        - '<h2 id>'
-        - '<h3 id>'
-        - '<h4 id>'
-        - '<h5 id>'
-        - '<h6 id>'
-        - '<a hreflang>'
-        - '<ul type>'
-        - '<ol type>'
-    ckeditor5_list:
-      reversed: false
-      startIndex: true
+    drupallink:
+      linkit_enabled: false
+      linkit_profile: ''
 image_upload:
   status: false
   scheme: public
