--- a/config/sync/filter.format.limited_html_link.yml
+++ b/config/sync/filter.format.limited_html_link.yml
@@ -12,6 +12,6 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<br> <p> <a hreflang href>'
+      allowed_html: '<br> <p> <a href hreflang>'
       filter_html_help: true
       filter_html_nofollow: false
