SIS2-694: Adjust permissions of field_top_image on green org profiles

--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -131,6 +131,7 @@ permissions:
   - 'create field_list_media'
   - 'create field_summary'
   - 'create field_top_image'
+  - 'create field_top_image_anonymous'
   - 'create image media'
   - 'create link_article content'
   - 'create media'
@@ -235,6 +236,7 @@ permissions:
   - 'edit field_list_media'
   - 'edit field_summary'
   - 'edit field_top_image'
+  - 'edit field_top_image_anonymous'
   - 'edit own almanac content'
   - 'edit own article content'
   - 'edit own audio media'
@@ -250,6 +252,7 @@ permissions:
   - 'edit own field_list_media'
   - 'edit own field_summary'
   - 'edit own field_top_image'
+  - 'edit own field_top_image_anonymous'
   - 'edit own image media'
   - 'edit own link_article content'
   - 'edit own news content'
