--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.atoms.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.atoms.yml
@@ -112,3 +112,49 @@ atoms:
       da: 'En linkartikel er indhold fra en anden hjemmeside som du ønsker at vise i listen over aktiviteter etc.'
       en: 'En linkartikel er indhold fra en anden hjemmeside som du ønsker at vise i listen over aktiviteter etc.'
     weight: 10
+
+  share-page-first-fieldset-title:
+    type: textfield
+    title: Del side - først fieldset - titel
+    category: Del side
+    default:
+      da: 'Mennesker og steder'
+      en: 'Mennesker og steder'
+    weight: 10
+
+  share-page-first-fieldset-suffix:
+    type: textfield
+    title: Del side - først fieldset - titel - suffix
+    category: Del side
+    default:
+      da: ''
+      en: ''
+    weight: 10
+
+  share-page-second-fieldset-title:
+    type: textfield
+    title: Del side - andet fieldset - titel
+    category: Del side
+    default:
+      da: 'Brugernes materialer'
+      en: 'Brugernes materialer'
+    weight: 10
+
+  share-page-second-fieldset-suffix:
+    type: textfield
+    title: Del side - andet fieldset - titel - suffix
+    category: Del side
+    default:
+      da: 'Del en ide til udeskole. Din ide bliver vist på hjemmesiden i den kategori, som hedder Brugernes materialer. Din ide kan – men skal ikke – knyttes til et sted på kortet.'
+      en: 'Del en ide til udeskole. Din ide bliver vist på hjemmesiden i den kategori, som hedder Brugernes materialer. Din ide kan – men skal ikke – knyttes til et sted på kortet.'
+    weight: 10
+
+  share-page-title:
+    type: textfield
+    title: Del side - sidetitel
+    category: Del side
+    default:
+      da: 'Hvad vil du oprette?'
+      en: 'Hvad vil du oprette?'
+    weight: 10
+
