SIS2-635: Adjustments to fields on user accounts

--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -113,6 +113,7 @@ permissions:
   - 'create field_article_image'
   - 'create field_article_related'
   - 'create field_colophon'
+  - 'create field_description'
   - 'create field_external_link'
   - 'create field_external_link_logo'
   - 'create field_list_media'
@@ -217,6 +218,7 @@ permissions:
   - 'edit field_article_image_migrated'
   - 'edit field_article_related'
   - 'edit field_colophon'
+  - 'edit field_description'
   - 'edit field_external_link'
   - 'edit field_external_link_logo'
   - 'edit field_list_media'
@@ -232,6 +234,7 @@ permissions:
   - 'edit own field_article_image'
   - 'edit own field_article_related'
   - 'edit own field_colophon'
+  - 'edit own field_description'
   - 'edit own field_external_link'
   - 'edit own field_external_link_logo'
   - 'edit own field_list_media'
