--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -27,6 +27,7 @@ permissions:
   - 'create blog_post content'
   - 'create document media'
   - 'create dot_on_map content'
+  - 'create field_description'
   - 'create field_list_media_anonymous'
   - 'create field_summary'
   - 'create image media'
@@ -43,6 +44,7 @@ permissions:
   - 'edit own article content'
   - 'edit own blog_post content'
   - 'edit own document media'
+  - 'edit own field_description'
   - 'edit own field_list_media_anonymous'
   - 'edit own field_summary'
   - 'edit own image media'
