--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -49,6 +49,7 @@ permissions:
   - 'view field_article_image_migrated'
   - 'view field_article_related'
   - 'view field_colophon'
+  - 'view field_description'
   - 'view field_external_link'
   - 'view field_external_link_logo'
   - 'view field_list_media'
@@ -62,6 +63,7 @@ permissions:
   - 'view own field_article_image_migrated'
   - 'view own field_article_related'
   - 'view own field_colophon'
+  - 'view own field_description'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
   - 'view own field_summary'
