--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -125,6 +125,7 @@ permissions:
   - 'create field_article_image'
   - 'create field_article_related'
   - 'create field_colophon'
+  - 'create field_description'
   - 'create field_external_link'
   - 'create field_external_link_logo'
   - 'create field_header'
@@ -230,6 +231,7 @@ permissions:
   - 'edit field_article_image_migrated'
   - 'edit field_article_related'
   - 'edit field_colophon'
+  - 'edit field_description'
   - 'edit field_external_link'
   - 'edit field_external_link_logo'
   - 'edit field_header'
@@ -246,6 +248,7 @@ permissions:
   - 'edit own field_article_image'
   - 'edit own field_article_related'
   - 'edit own field_colophon'
+  - 'edit own field_description'
   - 'edit own field_external_link'
   - 'edit own field_external_link_logo'
   - 'edit own field_header'
