--- a/config/sync/workflows.workflow.editorial.yml
+++ b/config/sync/workflows.workflow.editorial.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - node.type.article
     - node.type.dot_on_map
+    - node.type.link_article
     - node.type.page
   module:
     - content_moderation
@@ -79,5 +80,6 @@ type_settings:
     node:
       - article
       - dot_on_map
+      - link_article
       - page
   default_moderation_state: draft
