--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -52,6 +52,8 @@ permissions:
   - 'view field_description'
   - 'view field_external_link'
   - 'view field_external_link_logo'
+  - 'view field_files'
+  - 'view field_files_webmasters'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
   - 'view field_summary'
@@ -64,6 +66,8 @@ permissions:
   - 'view own field_article_related'
   - 'view own field_colophon'
   - 'view own field_description'
+  - 'view own field_files'
+  - 'view own field_files_webmasters'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
   - 'view own field_summary'
