--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -116,6 +116,7 @@ permissions:
   - 'create field_description'
   - 'create field_external_link'
   - 'create field_external_link_logo'
+  - 'create field_files_webmasters'
   - 'create field_list_media'
   - 'create field_summary'
   - 'create field_top_image'
@@ -221,6 +222,8 @@ permissions:
   - 'edit field_description'
   - 'edit field_external_link'
   - 'edit field_external_link_logo'
+  - 'edit field_files'
+  - 'edit field_files_webmasters'
   - 'edit field_list_media'
   - 'edit field_summary'
   - 'edit field_top_image'
@@ -237,6 +240,7 @@ permissions:
   - 'edit own field_description'
   - 'edit own field_external_link'
   - 'edit own field_external_link_logo'
+  - 'edit own field_files_webmasters'
   - 'edit own field_list_media'
   - 'edit own field_summary'
   - 'edit own field_top_image'
@@ -315,6 +319,7 @@ permissions:
   - 'view blog_post revisions'
   - 'view dot_on_map revisions'
   - 'view field_article_image'
+  - 'view field_files_webmasters'
   - 'view field_list_media'
   - 'view field_top_image'
   - 'view latest version'
@@ -323,6 +328,7 @@ permissions:
   - 'view own field_article_image'
   - 'view own field_external_link'
   - 'view own field_external_link_logo'
+  - 'view own field_files_webmasters'
   - 'view own field_list_media'
   - 'view own field_top_image'
   - 'view own organization profile'
