--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -25,6 +25,7 @@ permissions:
   - 'access site-wide contact form'
   - 'access user profiles'
   - 'create field_files'
+  - 'edit own field_files'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
@@ -40,6 +41,7 @@ permissions:
   - 'view field_description'
   - 'view field_external_link'
   - 'view field_external_link_logo'
+  - 'view field_files'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
   - 'view field_summary'
@@ -52,6 +54,7 @@ permissions:
   - 'view own field_article_related'
   - 'view own field_colophon'
   - 'view own field_description'
+  - 'view own field_files'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
   - 'view own field_summary'
