--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -128,6 +128,7 @@ permissions:
   - 'create field_description'
   - 'create field_external_link'
   - 'create field_external_link_logo'
+  - 'create field_files_webmasters'
   - 'create field_header'
   - 'create field_list_media'
   - 'create field_summary'
@@ -234,6 +235,8 @@ permissions:
   - 'edit field_description'
   - 'edit field_external_link'
   - 'edit field_external_link_logo'
+  - 'edit field_files'
+  - 'edit field_files_webmasters'
   - 'edit field_header'
   - 'edit field_list_media'
   - 'edit field_summary'
@@ -251,6 +254,7 @@ permissions:
   - 'edit own field_description'
   - 'edit own field_external_link'
   - 'edit own field_external_link_logo'
+  - 'edit own field_files_webmasters'
   - 'edit own field_header'
   - 'edit own field_list_media'
   - 'edit own field_summary'
@@ -330,6 +334,7 @@ permissions:
   - 'view blog_post revisions'
   - 'view dot_on_map revisions'
   - 'view field_article_image'
+  - 'view field_files_webmasters'
   - 'view field_list_media'
   - 'view field_top_image'
   - 'view latest version'
@@ -338,6 +343,7 @@ permissions:
   - 'view own field_article_image'
   - 'view own field_external_link'
   - 'view own field_external_link_logo'
+  - 'view own field_files_webmasters'
   - 'view own field_list_media'
   - 'view own field_top_image'
   - 'view own organization profile'
