--- a/config/sync/workflows.workflow.editorial.yml
+++ b/config/sync/workflows.workflow.editorial.yml
@@ -21,6 +21,7 @@ third_party_settings:
         article_submitted: article_submitted
       publish:
         article_approved: article_approved
+      afpublicere: {  }
 _core:
   default_config_hash: S15d9uky9v-NcZ8f-mLyK9BwEd4XAbyd7YvqceCbgDM
 id: editorial
@@ -43,7 +44,20 @@ type_settings:
       weight: 0
       published: true
       default_revision: true
+    unpublished:
+      label: 'Ikke udgivet'
+      weight: 6
+      published: false
+      default_revision: true
   transitions:
+    afpublicere:
+      label: Afpublicere
+      from:
+        - draft
+        - published
+        - unpublished
+      to: unpublished
+      weight: 5
     archive:
       label: Arkiver
       from:
@@ -66,7 +80,7 @@ type_settings:
       label: 'Opret Ny Kladde'
       from:
         - draft
-        - published
+        - unpublished
       to: draft
       weight: 0
     publish:
@@ -74,6 +88,7 @@ type_settings:
       from:
         - draft
         - published
+        - unpublished
       to: published
       weight: 1
   entity_types:
