--- a/config/sync/core.entity_form_display.node.link_article.default.yml
+++ b/config/sync/core.entity_form_display.node.link_article.default.yml
@@ -18,7 +18,9 @@ dependencies:
     - field.field.node.link_article.field_subject
     - image.style.thumbnail
     - node.type.link_article
+    - workflows.workflow.editorial
   module:
+    - content_moderation
     - entity_browser
     - field_group
     - image
@@ -270,6 +272,12 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     weight: 6
@@ -297,7 +305,6 @@ content:
     third_party_settings: {  }
 hidden:
   langcode: true
-  moderation_state: true
   path: true
   promote: true
   sticky: true
