--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -9,8 +9,10 @@ dependencies:
     - media.type.remote_video
     - media.type.video
     - node.type.article
+    - node.type.blog_post
     - node.type.dot_on_map
     - node.type.link_article
+    - node.type.news
     - workflows.workflow.editorial
   module:
     - content_moderation
@@ -48,7 +50,9 @@ permissions:
   - 'delete own remote_video media'
   - 'delete own video media'
   - 'edit own article content'
+  - 'edit own blog_post content'
   - 'edit own document media'
+  - 'edit own dot_on_map content'
   - 'edit own field_article_image_anonymous'
   - 'edit own field_colophon'
   - 'edit own field_external_link'
@@ -57,12 +61,15 @@ permissions:
   - 'edit own field_top_image_anonymous'
   - 'edit own image media'
   - 'edit own link_article content'
+  - 'edit own news content'
   - 'edit own remote_video media'
   - 'edit own video media'
   - 'update own organization profile'
+  - 'use editorial transition afpublicere'
   - 'use editorial transition create_new_draft'
   - 'use text format simpel_html_til_faktabokse'
   - 'view field_top_image_anonymous'
+  - 'view latest version'
   - 'view own field_external_link'
   - 'view own unpublished content'
   - 'view own unpublished media'
