--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -12,7 +12,10 @@ dependencies:
     - node.type.blog_post
     - node.type.dot_on_map
     - node.type.link_article
+    - node.type.news
+    - workflows.workflow.editorial
   module:
+    - content_moderation
     - field_permissions
     - filter
     - media
@@ -44,13 +47,18 @@ permissions:
   - 'edit own article content'
   - 'edit own blog_post content'
   - 'edit own document media'
+  - 'edit own dot_on_map content'
   - 'edit own field_description'
   - 'edit own field_list_media_anonymous'
   - 'edit own field_summary'
   - 'edit own image media'
   - 'edit own link_article content'
+  - 'edit own news content'
   - 'edit own remote_video media'
   - 'edit own video media'
+  - 'use editorial transition afpublicere'
+  - 'use editorial transition create_new_draft'
   - 'use text format simpel_html_til_faktabokse'
+  - 'view latest version'
   - 'view own unpublished content'
   - 'view own unpublished media'
