--- a/config/sync/image.style.article.yml
+++ b/config/sync/image.style.article.yml
@@ -23,4 +23,10 @@ effects:
       width: 900
       height: 506
       crop_type: focal_point
-pipeline: __default__
+  50d9d52a-f4f0-4b4e-84f8-0a437abde621:
+    uuid: 50d9d52a-f4f0-4b4e-84f8-0a437abde621
+    id: image_convert
+    weight: 3
+    data:
+      extension: webp
+pipeline: ''
