--- a/composer.json
+++ b/composer.json
@@ -149,9 +149,7 @@
                 "web-root": "webroot/"
             },
             "file-mapping": {
-                "[web-root]/robots.txt": {
-                    "append": "assets/robots-additions.txt"
-                },
+                "[web-root]/robots.txt": true,
                 "[web-root]/sites/development.services.yml": {
                     "mode": "replace",
                     "path": "assets/development.services.yml",
