--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -111,6 +111,7 @@ permissions:
   - 'create document media'
   - 'create dot_on_map content'
   - 'create field_article_image'
+  - 'create field_article_image_anonymous'
   - 'create field_article_related'
   - 'create field_colophon'
   - 'create field_description'
@@ -118,6 +119,7 @@ permissions:
   - 'create field_external_link_logo'
   - 'create field_files_webmasters'
   - 'create field_list_media'
+  - 'create field_list_media_anonymous'
   - 'create field_summary'
   - 'create field_top_image'
   - 'create field_top_image_anonymous'
@@ -216,6 +218,7 @@ permissions:
   - 'edit any webform submission'
   - 'edit atom'
   - 'edit field_article_image'
+  - 'edit field_article_image_anonymous'
   - 'edit field_article_image_migrated'
   - 'edit field_article_related'
   - 'edit field_colophon'
@@ -225,6 +228,7 @@ permissions:
   - 'edit field_files'
   - 'edit field_files_webmasters'
   - 'edit field_list_media'
+  - 'edit field_list_media_anonymous'
   - 'edit field_summary'
   - 'edit field_top_image'
   - 'edit field_top_image_anonymous'
@@ -235,6 +239,7 @@ permissions:
   - 'edit own document media'
   - 'edit own dot_on_map content'
   - 'edit own field_article_image'
+  - 'edit own field_article_image_anonymous'
   - 'edit own field_article_related'
   - 'edit own field_colophon'
   - 'edit own field_description'
@@ -242,6 +247,7 @@ permissions:
   - 'edit own field_external_link_logo'
   - 'edit own field_files_webmasters'
   - 'edit own field_list_media'
+  - 'edit own field_list_media_anonymous'
   - 'edit own field_summary'
   - 'edit own field_top_image'
   - 'edit own field_top_image_anonymous'
