--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -123,6 +123,7 @@ permissions:
   - 'create document media'
   - 'create dot_on_map content'
   - 'create field_article_image'
+  - 'create field_article_image_anonymous'
   - 'create field_article_related'
   - 'create field_colophon'
   - 'create field_description'
@@ -131,6 +132,7 @@ permissions:
   - 'create field_files_webmasters'
   - 'create field_header'
   - 'create field_list_media'
+  - 'create field_list_media_anonymous'
   - 'create field_summary'
   - 'create field_top_image'
   - 'create field_top_image_anonymous'
@@ -229,6 +231,7 @@ permissions:
   - 'edit any webform submission'
   - 'edit atom'
   - 'edit field_article_image'
+  - 'edit field_article_image_anonymous'
   - 'edit field_article_image_migrated'
   - 'edit field_article_related'
   - 'edit field_colophon'
@@ -239,6 +242,7 @@ permissions:
   - 'edit field_files_webmasters'
   - 'edit field_header'
   - 'edit field_list_media'
+  - 'edit field_list_media_anonymous'
   - 'edit field_summary'
   - 'edit field_top_image'
   - 'edit field_top_image_anonymous'
@@ -249,6 +253,7 @@ permissions:
   - 'edit own document media'
   - 'edit own dot_on_map content'
   - 'edit own field_article_image'
+  - 'edit own field_article_image_anonymous'
   - 'edit own field_article_related'
   - 'edit own field_colophon'
   - 'edit own field_description'
@@ -257,6 +262,7 @@ permissions:
   - 'edit own field_files_webmasters'
   - 'edit own field_header'
   - 'edit own field_list_media'
+  - 'edit own field_list_media_anonymous'
   - 'edit own field_summary'
   - 'edit own field_top_image'
   - 'edit own field_top_image_anonymous'
@@ -300,6 +306,7 @@ permissions:
   - 'update content translations'
   - 'update media'
   - 'update own organization profile'
+  - 'use editorial transition afpublicere'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
   - 'use editorial transition archived_published'
