--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -30,6 +30,7 @@ permissions:
   - 'create blog_post content'
   - 'create document media'
   - 'create dot_on_map content'
+  - 'create field_article_image_anonymous'
   - 'create field_description'
   - 'create field_list_media_anonymous'
   - 'create field_summary'
@@ -48,6 +49,7 @@ permissions:
   - 'edit own blog_post content'
   - 'edit own document media'
   - 'edit own dot_on_map content'
+  - 'edit own field_article_image_anonymous'
   - 'edit own field_description'
   - 'edit own field_list_media_anonymous'
   - 'edit own field_summary'
