--- a/config/sync/field.field.node.article.field_article_image.yml
+++ b/config/sync/field.field.node.article.field_article_image.yml
@@ -10,8 +10,8 @@ id: node.article.field_article_image
 field_name: field_article_image
 entity_type: node
 bundle: article
-label: 'Artiklens billede (webmasters)'
-description: "Et billede vist i begyndelsen af artiklen, under resuméet og før teksten.\r\nVi anbefaler et billedeformat på 900px X 506px. Ellers vil dit billede blive beskåret."
+label: 'Artiklens billede (kan kun redigeres af redaktører)'
+description: "Dette billede erstatter billedet ovenfor, som er uploadet af en anonym bruger eller en blogger.\r\nEt billede vist i begyndelsen af artiklen, under resuméet og før teksten.\r\nVi anbefaler et billedeformat på 900px X 506px. Ellers vil dit billede blive beskåret.\r\n"
 required: false
 translatable: false
 default_value: {  }
