--- a/config/sync/field.field.node.dot_on_map.field_list_media_anonymous.yml
+++ b/config/sync/field.field.node.dot_on_map.field_list_media_anonymous.yml
@@ -20,7 +20,7 @@ entity_type: node
 bundle: dot_on_map
 label: 'Liste media'
 description: 'Brug knappen og hent et godt foto på din computer. Billedet bliver vist ifm. søgeoversigter på hjemmesiden. Det skal være i bredformat og mindst 900 pixels bredt. (Ideelt er 900 x 506 pixels.) Du kan kun vælge ét foto.'
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
