--- a/config/sync/field.field.node.link_article.field_list_media_anonymous.yml
+++ b/config/sync/field.field.node.link_article.field_list_media_anonymous.yml
@@ -20,7 +20,7 @@ entity_type: node
 bundle: link_article
 label: 'Liste media'
 description: 'Vælg et foto, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
