SIS2-712: Change order and help text of fields II

--- a/config/sync/field.field.node.dot_on_map.sis_map_address_dawa.yml
+++ b/config/sync/field.field.node.dot_on_map.sis_map_address_dawa.yml
@@ -12,7 +12,7 @@ field_name: sis_map_address_dawa
 entity_type: node
 bundle: dot_on_map
 label: Addresse
-description: "Denne adresse bruges til at finde indholdet på kortet.\r\nHvis der ikke er nogen adresse, vil nedenstående koordinater blive brugt."
+description: "Denne adresse bruges til at finde indholdet på kortet.\r\nHvis der ikke er nogen adresse, så skriv blot stedets koordinater ind i de to felter nedenfor."
 required: false
 translatable: true
 default_value: {  }
