SIS2-744-686: Change image style of Article Image field to Article, changed title of add Link-Article form

--- a/config/sync/core.entity_view_display.media.image.article.yml
+++ b/config/sync/core.entity_view_display.media.image.article.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.media.article
     - field.field.media.image.field_media_category
     - field.field.media.image.field_media_image
-    - image.style.default
+    - image.style.article
     - media.type.image
   module:
     - image
@@ -27,7 +27,7 @@ content:
     label: hidden
     settings:
       image_link: ''
-      image_style: default
+      image_style: article
       image_loading:
         attribute: lazy
     third_party_settings: {  }
