SIS2-700: Change field name and helptext

--- a/config/sync/core.entity_form_display.node.link_article.default.yml
+++ b/config/sync/core.entity_form_display.node.link_article.default.yml
@@ -73,7 +73,7 @@ third_party_settings:
         classes: ''
         show_empty_fields: false
         id: ''
-        description: 'Her kan du vælge, hvilke fag, klassetrin, sted eller årstid, som passer bedst til din aktivitet/dit undervisningsforløb.'
+        description: 'Her kan du vælge, hvilke fag, klassetrin, sted eller årstid, som passer bedst til dit undervisningsforløb.'
         required_fields: true
     group_categorie_panes:
       children:
