--- a/config/sync/core.entity_view_display.node.link_article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.link_article.teaser.yml
@@ -17,15 +17,22 @@ dependencies:
     - field.field.node.link_article.field_season
     - field.field.node.link_article.field_subject
     - node.type.link_article
+    - responsive_image.styles.list_view
   module:
     - image
     - link
+    - responsive_image
     - user
 id: node.link_article.teaser
 targetEntityType: node
 bundle: link_article
 mode: teaser
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_article_months:
     type: entity_reference_label
     label: hidden
@@ -90,13 +97,11 @@ content:
     weight: 1
     region: content
   field_list_media_anonymous:
-    type: image
+    type: responsive_image
     label: hidden
     settings:
+      responsive_image_style: list_view
       image_link: ''
-      image_style: ''
-      image_loading:
-        attribute: lazy
     third_party_settings: {  }
     weight: 2
     region: content
